contact-host__textarea-question

--- a/listings-product/contact-host-message.html
+++ b/listings-product/contact-host-message.html
@@ -348,7 +348,7 @@
                                               >
                                                 <section>
                                                   <div
-                                                    class="tu9uqg8 e821la5 dir dir-ltr"
+                                                    class="contact-host__textarea-question e821la5 dir dir-ltr"
                                                   >
                                                     <h2
                                                       tabindex="-1"
