--- a/payments/payment.html
+++ b/payments/payment.html
@@ -653,7 +653,7 @@
                                             >
                                               <section>
                                                 <div
-                                                  class="tu9uqg8 dir dir-ltr"
+                                                  class="contact-host__textarea-question dir dir-ltr"
                                                 >
                                                   <h2
                                                     tabindex="-1"
@@ -811,7 +811,7 @@
                                             >
                                               <section>
                                                 <div
-                                                  class="tu9uqg8 dir dir-ltr"
+                                                  class="contact-host__textarea-question dir dir-ltr"
                                                 >
                                                   <h2
                                                     tabindex="-1"
@@ -958,7 +958,7 @@
                                             >
                                               <section>
                                                 <div
-                                                  class="tu9uqg8 dir dir-ltr"
+                                                  class="contact-host__textarea-question dir dir-ltr"
                                                 >
                                                   <h2
                                                     tabindex="-1"
@@ -1283,7 +1283,7 @@
                                             <div data-plugin-in-point-id="TITLE_ADDITIONAL_REQUIREMENT" data-section-id="TITLE_ADDITIONAL_REQUIREMENT"
                                               style="padding-top: 24px; padding-bottom: 24px;">
                                               <section>
-                                                <div class="tu9uqg8 dir dir-ltr">
+                                                <div class="contact-host__textarea-question dir dir-ltr">
                                                   <h2 tabindex="-1" class="heading" elementtiming="LCP-target">Required for your trip</h2>
                                                 </div>
                                               </section>
@@ -4724,7 +4724,7 @@
                                               <div data-plugin-in-point-id="TITLE_ADDITIONAL_REQUIREMENT" data-section-id="TITLE_ADDITIONAL_REQUIREMENT"
                                                 style="padding-top: 32px; padding-bottom: 24px;">
                                                 <section>
-                                                  <div class="tu9uqg8 dir dir-ltr">
+                                                  <div class="contact-host__textarea-question dir dir-ltr">
                                                     <h2 tabindex="-1" class="heading" elementtiming="LCP-target">Required for your trip</h2>
                                                   </div>
                                                 </section>
