--- a/payments/payment.html
+++ b/payments/payment.html
@@ -11066,7 +11066,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                       <div class="cx1v2qp dir dir-ltr" style="border-radius: 8px;">
                         <div class="flex">
                           <div class="relative" style="flex: 1 1 0%;">
-                            <div role="presentation" class="_sbmagf"
+                            <div role="presentation" class="presentation-dialog"
                               style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 8px 8px 0px 0px; inset: 0px 0px -1px;">
                             </div>
                             <div class="_1gpyw79" aria-haspopup="listbox" aria-labelledby="country-label country-trigger"
@@ -11084,14 +11084,14 @@ Thank you very much and we hope you enjoy your stay!</div>
                                     fill-rule="evenodd"></path>
                                 </svg></div>
                             </div>
-                            <div class="_t26glb"
+                            <div class="presentation-dialog-spacer"
                               style="inset: 0px 0px -1px; border-radius: 8px 8px 0px 0px; border-top-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-right-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-bottom-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-left-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-width: 1px; z-index: 0;">
                             </div>
                           </div>
                         </div>
                         <div class="flex">
                           <div class="relative" style="flex: 1 1 0%;">
-                            <div role="presentation" class="_sbmagf"
+                            <div role="presentation" class="presentation-dialog"
                               style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 0px 0px 8px 8px; inset: 0px 0px -1px;">
                             </div>
                             <div class="_tddesd"><label class="_1yw7hpv" for="phone_number">
@@ -11106,7 +11106,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                                   </div>
                                 </div>
                               </label></div>
-                            <div class="_t26glb"
+                            <div class="presentation-dialog-spacer"
                               style="inset: 0px 0px -1px; border-radius: 0px 0px 8px 8px; border-top-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-right-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-bottom-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-left-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-width: 1px; z-index: 0;">
                             </div>
                           </div>
