--- a/become-a-host/location.html
+++ b/become-a-host/location.html
@@ -339,7 +339,7 @@
                                      <div class="cx1v2qp dir dir-ltr" style="border-radius: 8px;">
                                       <div class="flex">
                                        <div class="relative" style="flex: 1 1 0%;">
-                                        <div role="presentation" class="_sbmagf" style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 8px 8px 0px 0px; inset: 0px 0px -1px;"></div>
+                                        <div role="presentation" class="presentation-dialog" style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 8px 8px 0px 0px; inset: 0px 0px -1px;"></div>
                                         <div class="_tddesd">
                                          <label class="_1yw7hpv" for="street">
                                           <div class="_1m2ich98"><div class="_11hx67x">Street</div></div>
@@ -349,7 +349,7 @@
                                          </label>
                                         </div>
                                         <div
-                                         class="_t26glb"
+                                         class="presentation-dialog-spacer"
                                          style="
                                           inset: 0px 0px -1px;
                                           border-radius: 8px 8px 0px 0px;
@@ -365,7 +365,7 @@
                                       </div>
                                       <div class="flex">
                                        <div class="relative" style="flex: 1 1 0%;">
-                                        <div role="presentation" class="_sbmagf" style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 0px; inset: 0px 0px -1px;"></div>
+                                        <div role="presentation" class="presentation-dialog" style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 0px; inset: 0px 0px -1px;"></div>
                                         <div class="_tddesd">
                                          <label class="_1yw7hpv" for="apt">
                                           <div class="_1jn0ze9"><div class="_11hx67x">Apt, suite, etc. (Optional)</div></div>
@@ -375,7 +375,7 @@
                                          </label>
                                         </div>
                                         <div
-                                         class="_t26glb"
+                                         class="presentation-dialog-spacer"
                                          style="
                                           inset: 0px 0px -1px;
                                           border-radius: 0px;
@@ -391,7 +391,7 @@
                                       </div>
                                       <div class="flex">
                                        <div class="relative" style="flex: 1 1 0%;">
-                                        <div role="presentation" class="_sbmagf" style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 0px; inset: 0px 0px -1px;"></div>
+                                        <div role="presentation" class="presentation-dialog" style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 0px; inset: 0px 0px -1px;"></div>
                                         <div class="_tddesd">
                                          <label class="_1yw7hpv" for="city">
                                           <div class="_1m2ich98"><div class="_11hx67x">City</div></div>
@@ -401,7 +401,7 @@
                                          </label>
                                         </div>
                                         <div
-                                         class="_t26glb"
+                                         class="presentation-dialog-spacer"
                                          style="
                                           inset: 0px 0px -1px;
                                           border-radius: 0px;
@@ -417,7 +417,7 @@
                                       </div>
                                       <div class="flex">
                                        <div class="relative" style="flex: 1 1 0%;">
-                                        <div role="presentation" class="_sbmagf" style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 0px; inset: 0px 0px -1px;"></div>
+                                        <div role="presentation" class="presentation-dialog" style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 0px; inset: 0px 0px -1px;"></div>
                                         <div class="_tddesd">
                                          <label class="_1yw7hpv" for="state">
                                           <div class="_1m2ich98"><div class="_11hx67x">State (Optional)</div></div>
@@ -427,7 +427,7 @@
                                          </label>
                                         </div>
                                         <div
-                                         class="_t26glb"
+                                         class="presentation-dialog-spacer"
                                          style="
                                           inset: 0px 0px -1px;
                                           border-radius: 0px;
@@ -443,7 +443,7 @@
                                       </div>
                                       <div class="flex">
                                        <div class="relative" style="flex: 1 1 0%;">
-                                        <div role="presentation" class="_sbmagf" style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 0px; inset: 0px 0px -1px;"></div>
+                                        <div role="presentation" class="presentation-dialog" style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 0px; inset: 0px 0px -1px;"></div>
                                         <div class="_tddesd">
                                          <label class="_1yw7hpv" for="zipcode">
                                           <div class="_1jn0ze9"><div class="_11hx67x">Zip code (Optional)</div></div>
@@ -453,7 +453,7 @@
                                          </label>
                                         </div>
                                         <div
-                                         class="_t26glb"
+                                         class="presentation-dialog-spacer"
                                          style="
                                           inset: 0px 0px -1px;
                                           border-radius: 0px;
@@ -469,7 +469,7 @@
                                       </div>
                                       <div class="flex">
                                        <div class="relative" style="flex: 1 1 0%;">
-                                        <div role="presentation" class="_sbmagf" style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 0px 0px 8px 8px; inset: 0px 0px -1px;"></div>
+                                        <div role="presentation" class="presentation-dialog" style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 0px 0px 8px 8px; inset: 0px 0px -1px;"></div>
                                         <div class="_ey3tib">
                                          <label class="_19nw8j1" for="countryCode">
                                           <div class="_zhftk97"><div class="_11hx67x">Country / Region</div></div>
@@ -734,7 +734,7 @@
                                          </div>
                                         </div>
                                         <div
-                                         class="_t26glb"
+                                         class="presentation-dialog-spacer"
                                          style="
                                           inset: 0px 0px -1px;
                                           border-radius: 0px 0px 8px 8px;
