--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -6753,7 +6753,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                               <div class="cx1v2qp dir dir-ltr" style="border-radius: 8px;">
                                                                 <div class="flex">
                                                                   <div class="relative" style="flex: 1 1 0%;">
-                                                                    <div role="presentation" class="_sbmagf"
+                                                                    <div role="presentation" class="presentation-dialog"
                                                                       style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 8px 8px 0px 0px; inset: 0px 0px -1px;">
                                                                     </div>
                                                                     <div class="_ey3tib"><label class="_19nw8j1" for="country">
@@ -7016,14 +7016,14 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                           </g>
                                                                         </svg></div>
                                                                     </div>
-                                                                    <div class="_t26glb"
+                                                                    <div class="presentation-dialog-spacer"
                                                                       style="inset: 0px 0px -1px; border-radius: 8px 8px 0px 0px; border-top-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-right-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-bottom-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-left-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-width: 1px; z-index: 0;">
                                                                     </div>
                                                                   </div>
                                                                 </div>
                                                                 <div class="flex">
                                                                   <div class="relative" style="flex: 2 1 0%;">
-                                                                    <div role="presentation" class="_sbmagf"
+                                                                    <div role="presentation" class="presentation-dialog"
                                                                       style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 0px 0px 8px 8px; inset: 0px 0px -1px;">
                                                                     </div>
                                                                     <div class="_tddesd"><label class="_1yw7hpv" for="phoneInputphoneNumber">
@@ -7040,7 +7040,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                           </div>
                                                                         </div>
                                                                       </label></div>
-                                                                    <div class="_t26glb"
+                                                                    <div class="presentation-dialog-spacer"
                                                                       style="inset: 0px 0px -1px; border-radius: 0px 0px 8px 8px; border-top-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-right-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-bottom-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-left-color: var(--comboInputGroup_borderColor, var(--iw-ihca)); border-width: 1px; z-index: 0;">
                                                                     </div>
                                                                   </div>
