products-container__book-it-default

--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -24327,7 +24327,7 @@
                                 </div>
                               </div>
                             </div>
-                            <div class="_fz3zdn">
+                            <div class="products-container__book-it-default">
                               <div class="img-middle"
                                 style="display: inline-block; vertical-align: bottom; height: auto; width: 88px; min-height: 1px;">
                                 <img class="_792k0r1" aria-hidden="true" alt="" elementtiming="LCP-target"
