--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -5225,7 +5225,7 @@
                                                       </span>
                                                     </div>
                                                   </div>
-                                                  <div class="_fz3zdn">
+                                                  <div class="products-container__book-it-default">
                                                     <div class=" dir dir-ltr"><button data-testid="homes-pdp-cta-btn"
                                                         type="button" class="_108mstlv"><span
                                                           class="tjxdvlu dir dir-ltr"><span class="t12u7nq4 dir dir-ltr"
