--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -5288,7 +5288,7 @@
                                                             </button></span>
                                                         </div>
                                                       </div>
-                                                      <div class="_fz3zdn">
+                                                      <div class="products-container__book-it-default">
                                                         <div class="dir dir-ltr">
                                                           <button data-testid="homes-pdp-cta-btn" type="button"
                                                             class="_108mstlv">
