--- a/payments/payment.html
+++ b/payments/payment.html
@@ -702,7 +702,7 @@
                                                         Oct 24 – 27
                                                       </div>
                                                     </div>
-                                                    <div class="_fz3zdn">
+                                                    <div class="products-container__book-it-default">
                                                       <button
                                                         data-testid="checkout_platform.DATE_PICKER.edit"
                                                         aria-label="Edit dates"
@@ -756,7 +756,7 @@
                                                         1 guest
                                                       </div>
                                                     </div>
-                                                    <div class="_fz3zdn">
+                                                    <div class="products-container__book-it-default">
                                                       <button
                                                         data-testid="checkout_platform.GUEST_PICKER.edit"
                                                         aria-label="Edit Guests"
@@ -1305,7 +1305,7 @@
                                                     </div>
                                                     <div class="_o7c33ig">Let the Host know why you're traveling and when you'll check in.</div>
                                                   </div>
-                                                  <div class="_fz3zdn"><button data-modal="#message-the-host-modal" data-testid="checkout_platform.FIRST_MESSAGE.add" type="button"
+                                                  <div class="products-container__book-it-default"><button data-modal="#message-the-host-modal" data-testid="checkout_platform.FIRST_MESSAGE.add" type="button"
                                                       class="_1ju7xj0j">Add</button></div>
                                                 </div>
                                                 <div class="confirm-pay__container"></div>
@@ -1328,7 +1328,7 @@
                                                   </div>
                                                   <div class="_o7c33ig">Add and confirm your phone number to get trip updates.</div>
                                                 </div>
-                                                <div class="_fz3zdn"><button data-modal="#phone-number-modal" data-testid="checkout_platform.PHONE_VERIFICATION.add" type="button"
+                                                <div class="products-container__book-it-default"><button data-modal="#phone-number-modal" data-testid="checkout_platform.PHONE_VERIFICATION.add" type="button"
                                                     class="_1ju7xj0j">Add</button></div>
                                               </div>
                                               <div class="confirm-pay__container"></div>
@@ -1349,7 +1349,7 @@
                                                   </div>
                                                   <div class="_o7c33ig">Hosts want to know who’s staying at their place.</div>
                                                 </div>
-                                                <div class="_fz3zdn"><button data-modal="#profile-photo-modal" type="button" class="_1ju7xj0j">Add</button></div>
+                                                <div class="products-container__book-it-default"><button data-modal="#profile-photo-modal" type="button" class="_1ju7xj0j">Add</button></div>
                                               </div>
                                               <div class="confirm-pay__container"></div>
                                             </div>
@@ -4743,7 +4743,7 @@
                                                     </div>
                                                     <div class="_o7c33ig">Let the Host know why you're traveling and when you'll check in.</div>
                                                   </div>
-                                                  <div class="_fz3zdn"><button data-modal="#message-the-host-modal" data-testid="checkout_platform.FIRST_MESSAGE.add" type="button"
+                                                  <div class="products-container__book-it-default"><button data-modal="#message-the-host-modal" data-testid="checkout_platform.FIRST_MESSAGE.add" type="button"
                                                       class="_1ju7xj0j">Add</button></div>
                                                 </div>
                                                 <div class="confirm-pay__container"></div>
@@ -4761,7 +4761,7 @@
                                                   </div>
                                                   <div class="_o7c33ig">Hosts want to know who’s staying at their place.</div>
                                                 </div>
-                                                <div class="_fz3zdn"><button data-modal="#profile-photo-modal" type="button" class="_1ju7xj0j">Add</button></div>
+                                                <div class="products-container__book-it-default"><button data-modal="#profile-photo-modal" type="button" class="_1ju7xj0j">Add</button></div>
                                               </div>
                                               <div class="confirm-pay__container"></div>
                                             </div>
@@ -4778,7 +4778,7 @@
                                                   </div>
                                                   <div class="_o7c33ig">Add and confirm your phone number to get trip updates.</div>
                                                 </div>
-                                                <div class="_fz3zdn"><button data-modal="#phone-number-modal" data-testid="checkout_platform.PHONE_VERIFICATION.add" type="button"
+                                                <div class="products-container__book-it-default"><button data-modal="#phone-number-modal" data-testid="checkout_platform.PHONE_VERIFICATION.add" type="button"
                                                     class="_1ju7xj0j">Add</button></div>
                                               </div>
                                               <div class="confirm-pay__container"></div>
