--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -10990,7 +10990,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                           <div class="tab__content-visibility">
                                             <div class="_267gg">
                                               <div>
-                                                <div class="_10qs2gf">
+                                                <div class="task-container__wrapper">
                                                   <div class="_v9mh2x0">
                                                     <div class="_14batbi">
                                                       <div class="mb-6">
