--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -920,7 +920,7 @@
                                                 <button
                                                   role="radio"
                                                   title="Moderate"
-                                                  class="_np90lm"
+                                                  class="badge"
                                                   aria-checked="false"
                                                   type="button"
                                                 >
@@ -935,7 +935,7 @@
                                                 <button
                                                   role="radio"
                                                   title="Strenuous"
-                                                  class="_np90lm"
+                                                  class="badge"
                                                   aria-checked="false"
                                                   type="button"
                                                 >
@@ -950,7 +950,7 @@
                                                 <button
                                                   role="radio"
                                                   title="Extreme"
-                                                  class="_np90lm"
+                                                  class="badge"
                                                   aria-checked="false"
                                                   type="button"
                                                 >
@@ -1014,7 +1014,7 @@
                                                 <button
                                                   role="radio"
                                                   title="Intermediate"
-                                                  class="_np90lm"
+                                                  class="badge"
                                                   aria-checked="false"
                                                   type="button"
                                                 >
@@ -1029,7 +1029,7 @@
                                                 <button
                                                   role="radio"
                                                   title="Advanced"
-                                                  class="_np90lm"
+                                                  class="badge"
                                                   aria-checked="false"
                                                   type="button"
                                                 >
@@ -1044,7 +1044,7 @@
                                                 <button
                                                   role="radio"
                                                   title="Expert"
-                                                  class="_np90lm"
+                                                  class="badge"
                                                   aria-checked="false"
                                                   type="button"
                                                 >
