--- a/resource-center/topic.html
+++ b/resource-center/topic.html
@@ -1000,7 +1000,7 @@
                                                     <div class=" dir dir-ltr"
                                                         id="resourceCenter.topic.filterChipGroup-DLS-chipGroup-label"><span
                                                             class="visually-hidden dir dir-ltr">Content type filters</span></div><button
-                                                        class="_np90lm" aria-expanded="false" type="button" id="content-type-btn">Content type<span
+                                                        class="badge" aria-expanded="false" type="button" id="content-type-btn">Content type<span
                                                             aria-hidden="true" class="_1vwho579">Content type</span></button>
                                                 </div>
                                             </div>
