--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -11008,10 +11008,10 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                       <div class="_19tazlf">
                                                         <div class=" dir dir-ltr" role="group" id="trip_details" aria-labelledby="trip_details-DLS-chipGroup-label">
                                                           <div class=" dir dir-ltr" id="trip_details-DLS-chipGroup-label"></div><span class="_1dmyuxq"
-                                                            data-testid="experiences-change-dates"><button class="_np90lm" aria-expanded="false" type="button">Add
+                                                            data-testid="experiences-change-dates"><button class="badge" aria-expanded="false" type="button">Add
                                                               dates<span aria-hidden="true" class="_1vwho579">Add dates</span></button></span><span
                                                             class="_1dmyuxq"><button class="_1h0bjrrv" aria-expanded="false" type="button">1 guest<span aria-hidden="true"
-                                                                class="_1vwho579">1 guest</span></button></span><span class="_1dmyuxq"><button class="_np90lm"
+                                                                class="_1vwho579">1 guest</span></button></span><span class="_1dmyuxq"><button class="badge"
                                                               aria-expanded="false" type="button">Private group<span aria-hidden="true" class="_1vwho579">Private
                                                                 group</span></button></span>
                                                         </div>
