button__hidden-text

--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -912,7 +912,7 @@
                                                   Light
                                                   <span
                                                     aria-hidden="true"
-                                                    class="_1vwho579"
+                                                    class="button__hidden-text"
                                                   >
                                                     Light
                                                   </span>
@@ -927,7 +927,7 @@
                                                   Moderate
                                                   <span
                                                     aria-hidden="true"
-                                                    class="_1vwho579"
+                                                    class="button__hidden-text"
                                                   >
                                                     Moderate
                                                   </span>
@@ -942,7 +942,7 @@
                                                   Strenuous
                                                   <span
                                                     aria-hidden="true"
-                                                    class="_1vwho579"
+                                                    class="button__hidden-text"
                                                   >
                                                     Strenuous
                                                   </span>
@@ -957,7 +957,7 @@
                                                   Extreme
                                                   <span
                                                     aria-hidden="true"
-                                                    class="_1vwho579"
+                                                    class="button__hidden-text"
                                                   >
                                                     Extreme
                                                   </span>
@@ -1006,7 +1006,7 @@
                                                   Beginner
                                                   <span
                                                     aria-hidden="true"
-                                                    class="_1vwho579"
+                                                    class="button__hidden-text"
                                                   >
                                                     Beginner
                                                   </span>
@@ -1021,7 +1021,7 @@
                                                   Intermediate
                                                   <span
                                                     aria-hidden="true"
-                                                    class="_1vwho579"
+                                                    class="button__hidden-text"
                                                   >
                                                     Intermediate
                                                   </span>
@@ -1036,7 +1036,7 @@
                                                   Advanced
                                                   <span
                                                     aria-hidden="true"
-                                                    class="_1vwho579"
+                                                    class="button__hidden-text"
                                                   >
                                                     Advanced
                                                   </span>
@@ -1051,7 +1051,7 @@
                                                   Expert
                                                   <span
                                                     aria-hidden="true"
-                                                    class="_1vwho579"
+                                                    class="button__hidden-text"
                                                   >
                                                     Expert
                                                   </span>
