--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -11009,10 +11009,10 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                         <div class=" dir dir-ltr" role="group" id="trip_details" aria-labelledby="trip_details-DLS-chipGroup-label">
                                                           <div class=" dir dir-ltr" id="trip_details-DLS-chipGroup-label"></div><span class="_1dmyuxq"
                                                             data-testid="experiences-change-dates"><button class="badge" aria-expanded="false" type="button">Add
-                                                              dates<span aria-hidden="true" class="_1vwho579">Add dates</span></button></span><span
+                                                              dates<span aria-hidden="true" class="button__hidden-text">Add dates</span></button></span><span
                                                             class="_1dmyuxq"><button class="_1h0bjrrv" aria-expanded="false" type="button">1 guest<span aria-hidden="true"
-                                                                class="_1vwho579">1 guest</span></button></span><span class="_1dmyuxq"><button class="badge"
-                                                              aria-expanded="false" type="button">Private group<span aria-hidden="true" class="_1vwho579">Private
+                                                                class="button__hidden-text">1 guest</span></button></span><span class="_1dmyuxq"><button class="badge"
+                                                              aria-expanded="false" type="button">Private group<span aria-hidden="true" class="button__hidden-text">Private
                                                                 group</span></button></span>
                                                         </div>
                                                       </div>
