--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -8823,7 +8823,7 @@
                     <div class="_1o05292">
                       <div class="_1o2zacc"><button id="flexible-dates-checkbox-wishlist-0" class="_12i6oakv"
                           role="radio" aria-checked="true" type="button">Exact dates<span aria-hidden="true"
-                            class="_1vwho579">Exact dates</span></button></div>
+                            class="button__hidden-text">Exact dates</span></button></div>
                       <div class="_1o2zacc"><button id="flexible-dates-checkbox-wishlist-1" class="_qj94838"
                           role="radio" aria-checked="false" type="button"><span class="_1fs9960"><svg
                               viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
@@ -8832,7 +8832,7 @@
                               <g fill="none">
                                 <path d="M16 4v16m-8-8h16M8 26h16"></path>
                               </g>
-                            </svg></span><span class="_uhlm2">1 day<span aria-hidden="true" class="_1vwho579">1
+                            </svg></span><span class="_uhlm2">1 day<span aria-hidden="true" class="button__hidden-text">1
                               day</span></span></button></div>
                       <div class="_1o2zacc"><button id="flexible-dates-checkbox-wishlist-2" class="_qj94838"
                           role="radio" aria-checked="false" type="button"><span class="_1fs9960"><svg
@@ -8842,7 +8842,7 @@
                               <g fill="none">
                                 <path d="M16 4v16m-8-8h16M8 26h16"></path>
                               </g>
-                            </svg></span><span class="_uhlm2">2 days<span aria-hidden="true" class="_1vwho579">2
+                            </svg></span><span class="_uhlm2">2 days<span aria-hidden="true" class="button__hidden-text">2
                               days</span></span></button></div>
                       <div class="_1o2zacc"><button id="flexible-dates-checkbox-wishlist-3" class="_qj94838"
                           role="radio" aria-checked="false" type="button"><span class="_1fs9960"><svg
@@ -8852,7 +8852,7 @@
                               <g fill="none">
                                 <path d="M16 4v16m-8-8h16M8 26h16"></path>
                               </g>
-                            </svg></span><span class="_uhlm2">3 days<span aria-hidden="true" class="_1vwho579">3
+                            </svg></span><span class="_uhlm2">3 days<span aria-hidden="true" class="button__hidden-text">3
                               days</span></span></button></div>
                       <div class="_1o2zacc"><button id="flexible-dates-checkbox-wishlist-4" class="_qj94838"
                           role="radio" aria-checked="false" type="button"><span class="_1fs9960"><svg
@@ -8862,7 +8862,7 @@
                               <g fill="none">
                                 <path d="M16 4v16m-8-8h16M8 26h16"></path>
                               </g>
-                            </svg></span><span class="_uhlm2">5 days<span aria-hidden="true" class="_1vwho579">5
+                            </svg></span><span class="_uhlm2">5 days<span aria-hidden="true" class="button__hidden-text">5
                               days</span></span></button></div>
                       <div class="_1o2zacc"><button id="flexible-dates-checkbox-wishlist-5" class="_qj94838"
                           role="radio" aria-checked="false" type="button"><span class="_1fs9960"><svg
@@ -8872,7 +8872,7 @@
                               <g fill="none">
                                 <path d="M16 4v16m-8-8h16M8 26h16"></path>
                               </g>
-                            </svg></span><span class="_uhlm2">7 days<span aria-hidden="true" class="_1vwho579">7
+                            </svg></span><span class="_uhlm2">7 days<span aria-hidden="true" class="button__hidden-text">7
                               days</span></span></button></div>
                     </div>
                   </div>
