--- a/online-experience/insights.html
+++ b/online-experience/insights.html
@@ -1564,7 +1564,7 @@
                                         </div>
                                         <span
                                           aria-hidden="true"
-                                          class="_1vwho579"
+                                          class="button__hidden-text"
                                         >
                                           <div class="_h3y4zy">
                                             <div>
@@ -1637,7 +1637,7 @@
                                         </div>
                                         <span
                                           aria-hidden="true"
-                                          class="_1vwho579"
+                                          class="button__hidden-text"
                                         >
                                           <div class="_h3y4zy">
                                             <div>
