--- a/resource-center/topic.html
+++ b/resource-center/topic.html
@@ -1001,7 +1001,7 @@
                                                         id="resourceCenter.topic.filterChipGroup-DLS-chipGroup-label"><span
                                                             class="visually-hidden dir dir-ltr">Content type filters</span></div><button
                                                         class="badge" aria-expanded="false" type="button" id="content-type-btn">Content type<span
-                                                            aria-hidden="true" class="_1vwho579">Content type</span></button>
+                                                            aria-hidden="true" class="button__hidden-text">Content type</span></button>
                                                 </div>
                                             </div>
                                         </div>
