site-content__content-menu-h2-text

--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -2454,7 +2454,7 @@
                 class="heading"
                 elementtiming="LCP-target"
               >
-                <div class="_1muy8yf" aria-hidden="false">
+                <div class="site-content__content-menu-h2-text" aria-hidden="false">
                   Choose from available dates
                 </div>
               </h2>
