--- a/landing-pages/full-screen-hero.html
+++ b/landing-pages/full-screen-hero.html
@@ -1785,69 +1785,69 @@
                         >
                           <div class="footer__container">
                             <div class="footer__links-wrapper">
-                              <section class="_1l3ys1i">
-                                <div class="_x6q4xl">
-                                  <h3 class="_otc65q">Support</h3>
+                              <section class="footer__links">
+                                <div class="footer__heading-wrapper">
+                                  <h3 class="footer__heading">Support</h3>
                                 </div>
-                                <ul class="_yuolfv">
-                                  <li class="_wmuyow">
+                                <ul class="footer__links-list">
+                                  <li class="footer__links-item">
                                     <a
                                       href="/help/home?from=footer"
                                       class="footer__link"
                                       >Help Center</a
                                     >
                                   </li>
-                                  <li class="_wmuyow">
+                                  <li class="footer__links-item">
                                     <a href="/aircover" class="footer__link"
                                       >AirCover</a
                                     >
                                   </li>
-                                  <li class="_wmuyow">
+                                  <li class="footer__links-item">
                                     <a href="/trust" class="footer__link"
                                       >Safety information</a
                                     >
                                   </li>
-                                  <li class="_wmuyow">
+                                  <li class="footer__links-item">
                                     <a
                                       href="/accessibility"
                                       class="footer__link"
                                       >Supporting people with disabilities</a
                                     >
                                   </li>
-                                  <li class="_wmuyow">
+                                  <li class="footer__links-item">
                                     <a
                                       href="/help/article/2701/extenuating-circumstances-policy-and-the-coronavirus-covid19"
                                       class="footer__link"
                                       >Cancellation options</a
                                     >
                                   </li>
-                                  <li class="_wmuyow">
+                                  <li class="footer__links-item">
                                     <a
                                       href="/d/covidsafety"
                                       class="footer__link"
                                       >Our COVID-19 Response</a
                                     >
                                   </li>
-                                  <li class="_wmuyow">
+                                  <li class="footer__links-item">
                                     <a href="/neighbors" class="footer__link"
                                       >Report a neighborhood concern</a
                                     >
                                   </li>
                                 </ul>
                               </section>
-                              <section class="_1l3ys1i">
-                                <div class="_x6q4xl">
-                                  <h3 class="_otc65q">Community</h3>
+                              <section class="footer__links">
+                                <div class="footer__heading-wrapper">
+                                  <h3 class="footer__heading">Community</h3>
                                 </div>
-                                <ul class="_yuolfv">
-                                  <li class="_wmuyow">
+                                <ul class="footer__links-list">
+                                  <li class="footer__links-item">
                                     <a
                                       href="https://www.airbnb.org?locale=en"
                                       class="footer__link"
                                       >Airbnb.org: disaster relief housing</a
                                     >
                                   </li>
-                                  <li class="_wmuyow">
+                                  <li class="footer__links-item">
                                     <a
                                       rel="noopener noreferrer"
                                       target="_blank"
@@ -1856,7 +1856,7 @@
                                       >Support Afghan refugees</a
                                     >
                                   </li>
-                                  <li class="_wmuyow">
+                                  <li class="footer__links-item">
                                     <a
                                       href="/against-discrimination"
                                       class="footer__link"
@@ -1865,38 +1865,38 @@
                                   </li>
                                 </ul>
                               </section>
-                              <section class="_1l3ys1i">
-                                <div class="_x6q4xl">
-                                  <h3 class="_otc65q">Hosting</h3>
+                              <section class="footer__links">
+                                <div class="footer__heading-wrapper">
+                                  <h3 class="footer__heading">Hosting</h3>
                                 </div>
-                                <ul class="_yuolfv">
-                                  <li class="_wmuyow">
+                                <ul class="footer__links-list">
+                                  <li class="footer__links-item">
                                     <a
                                       href="/host/homes?from_footer=1"
                                       class="footer__link"
                                       >Try hosting</a
                                     >
                                   </li>
-                                  <li class="_wmuyow">
+                                  <li class="footer__links-item">
                                     <a
                                       href="/aircover-for-hosts"
                                       class="footer__link"
                                       >AirCover for Hosts</a
                                     >
                                   </li>
-                                  <li class="_wmuyow">
+                                  <li class="footer__links-item">
                                     <a href="/resources" class="footer__link"
                                       >Explore hosting resources</a
                                     >
                                   </li>
-                                  <li class="_wmuyow">
+                                  <li class="footer__links-item">
                                     <a
                                       href="/help/community?s=footer"
                                       class="footer__link"
                                       >Visit our community forum</a
                                     >
                                   </li>
-                                  <li class="_wmuyow">
+                                  <li class="footer__links-item">
                                     <a
                                       href="/help/responsible-hosting"
                                       class="footer__link"
@@ -1905,41 +1905,41 @@
                                   </li>
                                 </ul>
                               </section>
-                              <section class="_1l3ys1i">
-                                <div class="_x6q4xl">
-                                  <h3 class="_otc65q">Airbnb</h3>
+                              <section class="footer__links">
+                                <div class="footer__heading-wrapper">
+                                  <h3 class="footer__heading">Airbnb</h3>
                                 </div>
-                                <ul class="_yuolfv">
-                                  <li class="_wmuyow">
+                                <ul class="footer__links-list">
+                                  <li class="footer__links-item">
                                     <a href="/press/news" class="footer__link"
                                       >Newsroom</a
                                     >
                                   </li>
-                                  <li class="_wmuyow">
+                                  <li class="footer__links-item">
                                     <a href="/2022-summer" class="footer__link"
                                       >Learn about new features</a
                                     >
                                   </li>
-                                  <li class="_wmuyow">
+                                  <li class="footer__links-item">
                                     <a
                                       href="https://news.airbnb.com/what-makes-airbnb-airbnb"
                                       class="footer__link"
                                       >Letter from our founders</a
                                     >
                                   </li>
-                                  <li class="_wmuyow">
+                                  <li class="footer__links-item">
                                     <a href="/careers" class="footer__link"
                                       >Careers</a
                                     >
                                   </li>
-                                  <li class="_wmuyow">
+                                  <li class="footer__links-item">
                                     <a
                                       href="https://investors.airbnb.com"
                                       class="footer__link"
                                       >Investors</a
                                     >
                                   </li>
-                                  <li class="_wmuyow">
+                                  <li class="footer__links-item">
                                     <a href="/giftcards" class="footer__link"
                                       >Gift cards</a
                                     >
