--- a/listings-product/contact-host-message.html
+++ b/listings-product/contact-host-message.html
@@ -440,7 +440,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="t2pjd0h dir dir-ltr">
+                <div class="incoming__container dir dir-ltr">
                   <div class="incoming__wrapper dir dir-ltr" data-testid="Incoming"></div>
                 </div>
                 <div
