--- a/listings-product/trips.html
+++ b/listings-product/trips.html
@@ -622,7 +622,7 @@
                   </div>
                   <div class="flex-before-after dir dir-ltr"></div>
                 </div>
-                <div class="t2pjd0h dir dir-ltr">
+                <div class="incoming__container dir dir-ltr">
                   <div class="incoming__wrapper dir dir-ltr" data-testid="Incoming"></div>
                 </div>
                 <div
