--- a/loaders/messages-loader.html
+++ b/loaders/messages-loader.html
@@ -1823,7 +1823,7 @@
                   </main>
                 </div>
               </div>
-              <div class="t2pjd0h dir dir-ltr">
+              <div class="incoming__container dir dir-ltr">
                 <div class="incoming__wrapper dir dir-ltr" data-testid="Incoming"></div>
               </div>
               <div class="t1nrbpkt dir dir-ltr" data-transition-layer="true" aria-hidden="true" inert="true">
