app-theme-visibility

--- a/listings-product/trips.html
+++ b/listings-product/trips.html
@@ -626,7 +626,7 @@
                   <div class="incoming__wrapper dir dir-ltr" data-testid="Incoming"></div>
                 </div>
                 <div
-                  class="t1nrbpkt dir dir-ltr"
+                  class="app-theme-visibility dir dir-ltr"
                   aria-hidden="true"
                   inert="true"
                 ></div>
