--- a/listings-product/contact-host-message.html
+++ b/listings-product/contact-host-message.html
@@ -444,7 +444,7 @@
                   <div class="incoming__wrapper dir dir-ltr" data-testid="Incoming"></div>
                 </div>
                 <div
-                  class="t1nrbpkt dir dir-ltr"
+                  class="app-theme-visibility dir dir-ltr"
                   data-transition-layer="true"
                   aria-hidden="true"
                   inert="true"
