--- a/loaders/messages-loader.html
+++ b/loaders/messages-loader.html
@@ -1826,7 +1826,7 @@
               <div class="incoming__container dir dir-ltr">
                 <div class="incoming__wrapper dir dir-ltr" data-testid="Incoming"></div>
               </div>
-              <div class="t1nrbpkt dir dir-ltr" data-transition-layer="true" aria-hidden="true" inert="true">
+              <div class="app-theme-visibility dir dir-ltr" data-transition-layer="true" aria-hidden="true" inert="true">
               </div>
             </div>
           </div>
