--- a/listings-product/rental.html
+++ b/listings-product/rental.html
@@ -6829,8 +6829,8 @@
                       style="--gp-padding-xsmallAndAbove: 24px; --gp-padding-smallAndAbove: 24px; --gp-padding-mediumAndAbove: 40px; --gp-padding-mediumPlusAndAbove: 24px; --gp-padding-largeAndAbove: 24px; --gp-padding-xlargeAndAbove: 24px;"
                       >
                       <!-- dof -->
-                      <!-- <main id="site-content" class="cy593r8 cq074iv dir dir-ltr"> -->
-                      <main id="site-content" class="cy593r8 dir dir-ltr">
+                      <!-- <main id="site-content" class="flex flex dir dir-ltr"> -->
+                      <main id="site-content" class="flex dir dir-ltr">
                         <div class="_1hytef3">
                         <div class="_fo8j1u0">
                           <button type="button" class="_ft1uei">
